remove debug lines; fix measurement unit

--- a/templates/report.html
+++ b/templates/report.html
@@ -73,7 +73,7 @@
         ],
         datasets: [
           {
-            label: "PM2.5 (ppm)",
+            label: "PM2.5 (µg/m³)",
             data: [
               {% for avg in averages %}
               {{ avg.average }},
