add resources page content

--- a/templates/resources.html
+++ b/templates/resources.html
@@ -2,6 +2,6 @@
 {% block content %}
 <div class="w3-container">
 <h1>Resources</h1>
-<p>To be added</p>
+{{ safe_content|safe }}
 </div>
 {% endblock %}
