--- a/templates/report.html
+++ b/templates/report.html
@@ -20,8 +20,8 @@
 
 {% block content %}
 <div class="w3-container">
-  <h1 class="w3-text-blue">AQ Report Sheet</h1>
-  <h2>Here's Your Report for {{ place_name }}</h2>
+  <h1 class="w3-text-blue">AQ Snapshot</h1>
+  <h2>Here's Your Snapshot for {{ place_name }}</h2>
   <div>
     <div class="w3-row">
       <div class="w3-col m5">
