--- a/templates/resources.html
+++ b/templates/resources.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="w3-container">
-<h1>Resources</h1>
+<h1 class="w3-text-blue">Resources</h1>
 {{ safe_content|safe }}
 </div>
 {% endblock %}
