margins and link color

--- a/templates/report.html
+++ b/templates/report.html
@@ -19,7 +19,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="w3-container">
+<div class="w3-container w3-margin">
   <h1 class="w3-text-blue">AQ Snapshot</h1>
   <h2>Here's Your Snapshot for {{ place_name }}</h2>
   <div>
