--- a/templates/resources.html
+++ b/templates/resources.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="w3-container">
+<div class="w3-container w3-padding-large w3-margin content">
 <h1 class="w3-text-blue">Resources</h1>
 {{ safe_content|safe }}
-</div>
 {% endblock %}
