--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="w3-container">
+<div class="w3-container w3-margin">
 <h1 class="w3-text-blue">AQ Snapshot</h1>
 <h2>Pick The Parameters</h2>
 
