--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,7 @@
     <input type="hidden" id="placeType" name="placeType" />
     <input type="hidden" id="placeID" name="placeID" />
     <div class="w3-right-align">This can be a country or a city name.</div>
-    <ul id="suggestions" class="w3-ul w3-hoverable">
-        <li class="suggested-item"></li>
-    </ul>
+    <ul id="suggestions" class="w3-ul w3-hoverable"></ul>
 
     <label for="time"><b>Averaging Time Interval</b></label>
     <select id="time" name="temporal" class="w3-input w3-border">
