fix temporal terms

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,9 @@
 
     <label for="time"><b>Averaging Time Interval</b></label>
     <select id="time" name="temporal" class="w3-input w3-border">
-        <option value="year" selected="selected">Yearly</option>
-        <option value="month">Monthly</option>
-        <option value="day">Daily</option>
+        <option value="year" selected="selected">Year</option>
+        <option value="month">Month</option>
+        <option value="day">Day</option>
     </select>
     <div class="w3-right-align">This is for choosing how detailed the data should be.</div>
 
