--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css')}}" />
         <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}"/>
-        <title>AQ Snapshot</title>
+        <title>Air Quality Snapshot</title>
         {% block head %}
         {% endblock %}
     </head>
