--- a/templates/report.html
+++ b/templates/report.html
@@ -20,7 +20,7 @@
 
 {% block content %}
 <div class="w3-container w3-margin">
-  <h1 class="w3-text-blue">AQ Snapshot</h1>
+  <h1 class="w3-text-blue">Air Quality Snapshot</h1>
   <h2>Here's Your Snapshot for {{ place_name }}</h2>
   <div>
     <div class="w3-row">
