update report page title

--- a/templates/report.html
+++ b/templates/report.html
@@ -20,8 +20,7 @@
 
 {% block content %}
 <div class="w3-container w3-margin">
-  <h1 class="w3-text-blue">Air Quality Snapshot</h1>
-  <h2>Here's Your Snapshot for {{ place_name }}</h2>
+  <h1 class="w3-text-blue">Air Quality Snapshot for {{ place_name }} {{ date_from }} to {{ date_to }}</h1>
   <div>
     <div class="w3-row">
       <div class="w3-col m5">
