--- a/templates/report.html
+++ b/templates/report.html
@@ -2,6 +2,7 @@
 
 {% block head %}
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/0.5.5/chartjs-plugin-annotation.js"></script>
 <script src="https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.js"></script>
 <link
   href="https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css"
@@ -49,8 +50,8 @@
     <div class="w3-cell-row">
 
       <div class="w3-container w3-cell">
-        <div class="chart-wrapper">
-          <canvas id="myChart" width="800" height="400"></canvas>
+        <div class="chart-wrapper" width="800" height="400">
+          <canvas id="myChart"></canvas>
         </div>
       </div>
     
@@ -97,6 +98,26 @@
           display: true,
           text: "{{ chart_title }}",
         },
+        annotation: {
+          annotations: [
+            {
+              drawTime: "afterDatasetsDraw",
+              id: "hline",
+              type: "line",
+              mode: "horizontal",
+              scaleID: "y-axis-0",
+              value: {{ who_threshold_value }},
+              borderColor: "rgba(0, 127, 63, 0.65)",
+              borderWidth: 8,
+              label: {
+                content: "WHO guideline threshold",
+                enabled: true,
+                backgroundColor: "rgba(0, 95, 191, 1.0)",
+                fontStyle: "normal",
+              },
+            },
+          ]
+        }
       },
     });
 
