--- a/templates/report.html
+++ b/templates/report.html
@@ -108,9 +108,9 @@
               scaleID: "y-axis-0",
               value: {{ who_threshold_value }},
               borderColor: "rgba(0, 127, 63, 0.65)",
-              borderWidth: 8,
+              borderWidth: 5,
               label: {
-                content: "WHO guideline threshold",
+                content: "WHO guidelines threshold",
                 enabled: true,
                 backgroundColor: "rgba(0, 95, 191, 1.0)",
                 fontStyle: "normal",
