--- a/templates/report.html
+++ b/templates/report.html
@@ -4,10 +4,12 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/0.5.5/chartjs-plugin-annotation.js"></script>
 <script src="https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.js"></script>
-<link
-  href="https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css"
-  rel="stylesheet"
-/>
+<link href="https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css" rel="stylesheet" />
+<meta property="og:url"           content="{{ page_url }}" />
+<meta property="og:type"          content="website" />
+<meta property="og:title"         content="Air Quality Snapshot for {{ place_name }} {{ date_from }} to {{ date_to }}" />
+<meta property="og:description"   content="Air Quality Snapshot by OpenAQ" />
+<!-- <meta property="og:image"         content="https://DOMAIN/path/image.jpg" /> -->
 <style>
   .ok-feedback {
     color: green;
