add download csv link

--- a/templates/report.html
+++ b/templates/report.html
@@ -35,8 +35,7 @@
       </div>
       <div class="w3-col m7">
         <div class="w3-right">
-          <!-- <button class="w3-button w3-blue w3-hover-green">Download Report »</button>
-          <button class="w3-button w3-blue w3-hover-green">Download Data »</button> -->
+          <a href="{{ csv_download_url }}" class="w3-button w3-blue w3-hover-green">Download Data »</a>
           <div id="share" style="display:inline">
             <button id="copyPageLink" onclick="copyLink()" class="w3-button w3-border">Copy page link</button>
             <a id="shareTwitterLink" target="_blank" href="" class="w3-button w3-blue w3-hover-green w3-ripple">
